fix today's appointments button aligntment

--- a/clinic/clinic_calendar/static/clinic_calendar/styles.css
+++ b/clinic/clinic_calendar/static/clinic_calendar/styles.css
@@ -12,8 +12,8 @@ body {
 
 .center {
   position: absolute;
-  left: 50%;
-  margin-left: -50px;
+  left: 40%;
+  right: 40%;
 }
 
 .btn {
